welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:63: error: not enough arguments for method courir: (nbPas: Int)Unit.
Unspecified value parameter nbPas.
		courir()((hauteur - mess));
                      ^